<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:isScrollContainer="true"
            android:scrollbars="vertical"
            android:padding="20dip"
            android:gravity="top">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="vertical">
                <ImageView
                    android:src="@drawable/ic_launcher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">
                <TextView
                    android:text="@string/app_name"
                    android:textSize="16.5sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/app_version"
                    android:textSize="16.5sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/about_text"
                    android:textSize="15.5sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp" />
                <TextView
                    android:text="@string/about_code_copyright"
                    android:textSize="13.0sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp" />
                <TextView
                    android:text="@string/about_license"
                    android:textSize="13.0sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp" />
                <TextView
                    android:id="@+id/about_barcode"
                    android:text="@string/about_outpan"
                    android:textSize="13.0sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp" />
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
                    <TextView
                        android:text="@string/about_url_label"
                        android:textSize="13.0sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="3dip" />
                    <TextView
                        android:text="@string/about_url"
                        android:textSize="13.0sp"
                        android:autoLink="web"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <TableLayout
        style="@android:style/ButtonBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="6dip"
        android:paddingRight="5dip"
        android:paddingBottom="5dip"
        android:layout_weight="0">
        <TableRow
            android:gravity="right">
            <Button
                style="@style/ButtonBarButton"
                android:id="@+id/about_ok_button"
                android:layout_height="fill_parent"
                android:layout_width="100dip"
                android:text="@string/ok_button_label" />
        </TableRow>
    </TableLayout>
</LinearLayout>
