<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:minHeight="?android:attr/listPreferredItemHeight"
    android:orientation="horizontal"
    android:paddingLeft="2dip"
    android:paddingRight="5dip"
    android:paddingTop="5dip"
    android:paddingBottom="5dip"
    android:gravity="center_vertical">
    <ImageView
        android:id="@+id/item_list_row_thumbnail_photo"
        android:background="@drawable/image_border"
        android:layout_width="96dip"
        android:layout_height="96dip"
        android:layout_marginRight="5dip"
        android:scaleType="fitCenter" />
    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="5dip"
        android:orientation="vertical"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/item_list_row_description"
            android:textColor="?android:attr/textColorPrimaryInverse"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:id="@+id/item_list_row_location_label"
                android:text="@string/item_list_row_location_label"
                android:textColor="?android:attr/textColorPrimaryInverse"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/item_list_row_location"
                android:textColor="?android:attr/textColorPrimaryInverse"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dip"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:id="@+id/item_list_row_category_label"
                android:text="@string/item_list_row_category_label"
                android:textColor="?android:attr/textColorPrimaryInverse"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/item_list_row_category"
                android:textColor="?android:attr/textColorPrimaryInverse"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dip"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:id="@+id/item_list_row_date_label"
                android:text="@string/item_list_row_date_label"
                android:textColor="?android:attr/textColorPrimaryInverse"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/item_list_row_date"
                android:textColor="?android:attr/textColorPrimaryInverse"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dip"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <RatingBar
                android:id="@+id/item_list_row_desirability"
                android:focusable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="1"
                style="?android:attr/ratingBarStyleSmall" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>